; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_exsystem.c_acpi_ex_system_do_stall.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_exsystem.c_acpi_ex_system_do_stall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AE_OK = common dso_local global i32 0, align 4
@AE_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Time parameter is too large (%d)\00", align 1
@AE_AML_OPERAND_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_ex_system_do_stall(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @AE_OK, align 4
  store i32 %4, i32* %3, align 4
  %5 = call i32 (...) @ACPI_FUNCTION_ENTRY()
  %6 = load i32, i32* %2, align 4
  %7 = icmp sgt i32 %6, 255
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load i32, i32* @AE_INFO, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @ACPI_ERROR(i32 %10)
  %12 = load i32, i32* @AE_AML_OPERAND_VALUE, align 4
  store i32 %12, i32* %3, align 4
  br label %16

13:                                               ; preds = %1
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @acpi_os_stall(i32 %14)
  br label %16

16:                                               ; preds = %13, %8
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @ACPI_FUNCTION_ENTRY(...) #1

declare dso_local i32 @ACPI_ERROR(i32) #1

declare dso_local i32 @acpi_os_stall(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
